--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "url": "git+https://github.com/bitsbybrad/audi.ooo.git"
   },
   "scripts" :{
-    // TODO: add github-pat-auth: https://github.com/lerna/lerna-changelog 
     "changelog": "yarn lerna-changelog"
   },
   "devDependencies": {
     "lerna": "^4.0.0",
     "lerna-changelog": "^1.0.1",
     "typescript": "^4.3.4"
+  },
+  "TODO:" : {
+    "lerna-changelog": "add github-pat-auth: https://github.com/lerna/lerna-changelog "
   }
 }
