--- a/toolchain/remix/package.json
+++ b/toolchain/remix/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@audio/remix",
+  "scripts": {
+    "dev": "yarn webpack serve"
+  },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
     "@babel/core": "^7.14.6",
@@ -8,13 +11,12 @@
     "@babel/preset-typescript": "^7.14.5",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
-    "babel-loader": "8.0.2",
-    "css-loader": "1.0.0",
-    "sass-loader": "^12.1.0",
-    "style-loader": "0.23.0",
-    "webpack": "4.19.1",
-    "webpack-cli": "3.1.1",
-    "webpack-dev-server": "3.1.8"
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.40.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "react": "^17.0.2",
